fix bar gap and tooltip font

--- a/src/sass/components/_dailyactivitychart.scss
+++ b/src/sass/components/_dailyactivitychart.scss
@@ -24,6 +24,7 @@
         background: variables.$redchart;
         color: variables.$white;
         font-size: 9px;
+        font-weight: bold;
         border: none;
         text-align: center;
         width: 50px;
